--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milk Replacer Calculator</title>
+    <title>Milk Replacer Calculator (Wonder Thrive)</title>
 </head>
 <body>
-    <h1>Milk Replacer Calculator</h1>
+    <h1>Milk Replacer Calculator (Wonder Thrive)</h1>
     <label for="calves">Number of Calves:</label>
     <input type="number" id="calves" name="calves" min="1" required>
     <label for="age">Age of Calves:</label>
