--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <button onclick="calculateMilkReplacer()">Calculate</button>
     <p id="result"></p>
 
+    <h1>Barrel Water Height Calculator</h1>
+    <label for="diameter">Diameter of Barrel (in cm):</label>
+    <input type="number" id="diameter" name="diameter" min="0" required>
+    <label for="volume">Volume of Water (in liters):</label>
+    <input type="number" id="volume" name="volume" min="0" required>
+    <button onclick="calculateWaterHeight()">Calculate</button>
+    <p id="barrelResult"></p>
+
     <script src="calculator.js"></script>
+    <script src="barrelCalculator.js"></script>
 </body>
 </html>
