--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milk Replacer Calculator (Wonder Thrive)</title>
+    <title>Milk Replacer Calculator (125g:0.875L)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        h1 {
+            color: #2e8b57;
+        }
+        label, select, input, button {
+            display: block;
+            margin: 10px 0;
+            width: 90%;
+            max-width: 400px;
+        }
+        input[type="number"], select, button {
+            padding: 10px;
+            font-size: 1em;
+        }
+        input[type="number"] {
+            max-width: 200px;
+        }
+        button {
+            background-color: #2e8b57;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #276645;
+        }
+        p {
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-    <h1>Milk Replacer Calculator (Wonder Thrive)</h1>
+    <h1>Milk Replacer Calculator (125g:0.875L)</h1>
     <label for="calves">Number of Calves:</label>
     <input type="number" id="calves" name="calves" min="1" required>
     <label for="age">Age of Calves:</label>
