--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: center;
         }
-        h1 {
+        h2 {
             color: #2e8b57;
         }
         label, select, input, button {
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1>Milk Replacer Calculator (125g:0.875L)</h1>
+    <h2>Milk Replacer Calculator <br> mix ratio 125g:0.875L </h2>
     <label for="calves">Number of Calves:</label>
     <input type="number" id="calves" name="calves" min="1" required>
     <label for="age">Age of Calves:</label>
@@ -64,7 +64,7 @@
     <button onclick="calculateMilkReplacer()">Calculate</button>
     <p id="result"></p>
 
-    <h1>Barrel Water Height Calculator</h1>
+    <h2>Barrel Water Height Calculator</h2>
     <label for="diameter">Diameter of Barrel (in cm):</label>
     <input type="number" id="diameter" name="diameter" min="0" required>
     <label for="volume">Volume of Water (in liters):</label>
