--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <input type="number" id="volume" name="volume" min="0" required>
     <button onclick="calculateWaterHeight()">Calculate</button>
     <p id="barrelResult"></p>
+    <br>
+    <br>
+    <br>
+    <p><B>Disclaimer:</B> The Milk Replacer Calculator is provided "as is" without any warranties or guarantees of any kind. The use of this tool is at your own risk, and we are not liable for any damages or losses resulting from its use. Always consult with a professional before making any decisions based on the results provided by this tool.</p>
 
     <script src="calculator.js"></script>
     <script src="barrelCalculator.js"></script>
