Reduce size of input boxes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             font-size: 1em;
         }
         input[type="number"] {
-            max-width: 200px;
+            max-width: 90px;
+        }
+        select {
+            max-width: 120px;
         }
         button {
             background-color: #2e8b57;
