--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         }
         p {
             color: #555;
+            margin: 10px 0;
+            padding: 10px;
         }
     </style>
 </head>
